[gd_scene format=3 uid="uid://e64pqmygk8vf"]

[ext_resource type="Script" uid="uid://djcd2bpvg161x" path="res://Scripts/graph_node.gd" id="1_iusu8"]

[sub_resource type="Theme" id="Theme_iusu8"]

[node name="GraphNode" type="GraphNode" unique_id=1672945934 node_paths=PackedStringArray("note", "title_line", "size_fonts", "font_size")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -635.0
offset_top = -360.0
offset_right = -278.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iusu8")
theme_override_constants/separation = 4
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_iusu8")
note = NodePath("Notepad")
title_line = NodePath("Ttle")
size_fonts = NodePath("Container/Font Size")
font_size = NodePath("Container/Font Size Title")
metadata/_edit_horizontal_guides_ = [-8.0]

[node name="Ttle" type="LineEdit" parent="." unique_id=577137378]
layout_mode = 2
placeholder_text = "TÃ­tulo"
alignment = 1
expand_to_text_length = true

[node name="Container" type="HBoxContainer" parent="." unique_id=1614242062]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Font Size Title" type="SpinBox" parent="Container" unique_id=397914048]
layout_mode = 2
min_value = 1.0
max_value = 80.0
value = 16.0

[node name="Font Size" type="SpinBox" parent="Container" unique_id=331735634]
layout_mode = 2
min_value = 1.0
max_value = 120.0
value = 16.0

[node name="CheckBox" type="Button" parent="Container" unique_id=499506831]
layout_mode = 2
text = "X"

[node name="Notepad" type="TextEdit" parent="." unique_id=1833819988]
clip_contents = true
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
text = "
"
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="Button Add" type="Button" parent="." unique_id=1867466557]
layout_mode = 2
text = "+"

[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="value_changed" from="Container/Font Size Title" to="." method="_on_font_size_title_value_changed"]
[connection signal="value_changed" from="Container/Font Size" to="." method="_on_font_size_value_changed"]
[connection signal="pressed" from="Container/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="Button Add" to="." method="_on_button_add_pressed"]
